--- a/app/src/main/res/layout/fragment_user_name.xml
+++ b/app/src/main/res/layout/fragment_user_name.xml
@@ -19,18 +19,18 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/card1"
-            android:layout_width="368dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            app:cardCornerRadius="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:cardCornerRadius="25dp"
             app:cardElevation="15dp">
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center_horizontal"
-                android:layout_marginTop="40dp"
-                android:text="Enter Github username  " />
+                android:textSize="@dimen/user_name"
+
+                android:text="@string/enter_user_name" />
             <EditText
                 android:id="@+id/editText"
                 android:layout_width="wrap_content"
@@ -46,37 +46,12 @@
                 android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="@string/find_my_followers"
+
                 android:layout_gravity="bottom|center_horizontal"
-                android:layout_marginBottom="40dp"
-                android:text="Find My Followers"
                 android:onClick="@{viewModel::onClickButton}"
                 />
 
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="368dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/card2"
-            android:layout_weight="0.5"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="15dp"
-            >
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top|center_horizontal"
-                android:layout_marginTop="40dp"
-                android:text="Pick Popular GithubUsernames " />
-
-            <Spinner
-                android:id="@+id/spinner"
-                android:layout_width="368dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                />
 
         </android.support.v7.widget.CardView>
 
